2002-06-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-zdnet.el (shimbun-make-contents): Remove image tags
	to `a1100.g.akamai.net'.

2002-06-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-uri-replace-alist): New user option.
	(w3m-uri-replace): New function.
	(w3m-goto-url): Call `w3m-uri-replace'.

2002-06-05  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el (shimbun-muchy-content-start): New variable.
	(shimbun-muchy-content-end): Ditto.
	(shimbun-make-contents): Just remove advertisements or so and
	call next method.

2002-06-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-e21.el (w3m-ucs-to-char): Don't define it when already defined.

	* w3m-xmas.el (w3m-ucs-to-char): Ditto.

2002-06-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.2.7 from emacs-w3m-1_2 branch.

	* w3m-weather.el: Require CL when this module is byte-compiled.
	(w3m-weather-completion-table): Fix typos, which are noticed by
	Ando Tsutomu <ando-tom@ff.iij4u.or.jp> in [emacs-w3m:03487].

2002-06-03  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-kde.el (shimbun-kde-reverse-flag): Set this variable
	to t.
	(shimbun-get-headers): Set URL properly.
	Do not use `nreverse' for HEADERS.

2002-05-31  Mito <mito@mxa.nes.nec.co.jp>

	* w3m-weather.el (w3m-weather-completion-table): Fix "niigata-kaetsu".

2002-05-30  Kenichi SATO <ksato@iijmio-mail.jp>

	* sb-sponichi.el (shimbun-sponichi-groups): Add golf and battle.
	(shimbun-get-headers): Follow the change of the Web site.
	Modify regexp to get flash articles.
	(shimbun-get-headers): Change Message-ID format.

2002-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-make-ccl-coding-system): Make it recallable for
	the existing coding-systems (we can now reload w3m.elc under
	XEmacs 21.5-b6 and later).

2002-05-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-w3m-retrieve-1): Don't decode the contents when
	redirect.
